[project]
name = "db-merge"
version = "0.1.0"
description = ""
authors = [{name = "Evgenii Rechkalov", email = "snorkysnark@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.36",
    "typer>=0.15.1",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
    "csml-click-types @ git+https://github.com/csml-tools/csml_click_types",
]

[project.scripts]
db-merge = "db_merge.cli:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
